--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "cors": "^2.8.5",
+    "http-server": "^14.1.1",
     "ngx-socket-io": "^4.5.1",
     "ngx-websocket": "^0.1.1",
     "rxjs": "~7.8.0",
